fixed readability on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body{
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
+    height: 100vh;
 }
 #start{
     text-align: center;
